making findbugs happy - part 2 of 2 (+1 coming soon)